# eagle-mpc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  multicopter_mpc-config.cmake  setup.cfg
benchmark/: CMakeLists.txt  mpc-main-carrot-profiling.cpp  mpc-main-carrot-timings.cpp  problem-rates.cpp
benchmark/utils/: utils.hpp
bindings/: CMakeLists.txt
bindings/python/eagle_mpc/: __init__.py  eagle-mpc.cpp  mpc-base.hpp  multicopter-base-params.hpp  multicopter-mpc.cpp  sbfddp.hpp  stage.hpp  trajectory.hpp
bindings/python/eagle_mpc/mpc-controllers/: carrot-mpc.hpp  rail-mpc.hpp  weighted-mpc.hpp
bindings/python/eagle_mpc/utils/: __init__.py  aerial_manipulation.py  map-converter.hpp  optional-converter.hpp  params_server.hpp  parser_yaml.hpp  plots.py  simulator.py  solver_squash.py  vector-converter.hpp  visualizer.py
bindings/python/multicopter_mpc/: __init__.py  main-mpc.hpp  mission.hpp  mpc-base.hpp  multicopter-base-params.hpp  multicopter-mpc.cpp  ocp-base.hpp  problem-mission.hpp  sbfddp.hpp  solver_squash.py  stage.hpp  trajectory.hpp  vector-converter.hpp  waypoint.hpp
bindings/python/multicopter_mpc/mpc-controllers/: carrot-mpc.hpp  rail-mpc.hpp  weighted-mpc.hpp
bindings/python/multicopter_mpc/ocp/: mpc-base.hpp  trajectory-generator.hpp
bindings/python/multicopter_mpc/utils/: __init__.py  aerial_manipulation.py  map-converter.hpp  mpc_controllers.py  optional-converter.hpp  params_server.hpp  parser_yaml.hpp  plots.py  simulator.py  solver_squash.py  tools.py  vector-converter.hpp  visualizer.py
cmake/: eagle_mpc-config.cmake  multicopter_mpc-config.cmake
config/: path.h.in  path.hpp.in  path.py.in
config/mission/: hover.yaml  loop.yaml  narrow.yaml  passthrough.yaml  passthrough_back.yaml  simple.yaml  takeoff.yaml  takeoff_pitch.yaml  takeoff_yaw.yaml
config/mpc/: hexacopter370_mpc.yaml  iris_mpc.yaml  mpc.yaml
config/multicopter/: firefly.yaml  hector_2dof.yaml  hexacopter370.yaml  hexarotor370.yaml  iris.yaml
config/multirotor/: firefly.yaml  hector.yaml  iris.yaml
config/ocp/: carrot-mpc.yaml  low-level-controller.yaml  mpc-main.yaml  picewise-mpc.yaml  rail-mpc.yaml  trajectory-generator.yaml
config/other/: path.h  path.py.in
config/trajectory/: am_eagle_catch.yaml  am_hover.yaml  eagle_catch.yaml  hex_hover.yaml  hexacopter370_flying_arm_3_eagle_catch.yaml  hexacopter370_hover.yaml  hexacopter370_passthrough.yaml  hover.yaml  iris_hover.yaml  iris_loop.yaml  quad_hover.yaml  quad_loop.yaml  quad_passthrough.yaml  trajectory.yaml
examples/: CMakeLists.txt  mpc-main.cpp  mpc.cpp  problem-crocoddyl.cpp  problem-main.cpp  problem-multicopter-mpc.cpp  problem-multicopter-test.cpp  problem_crocoddyl.cpp  problem_multicopter_mpc.cpp  trajectory-generation.cpp  trajectory.cpp
examples/python/: mpc.py  problem_multicopter_mpc.py  problem_multicopter_tests.py  problem_multicopter_ubound.py  trajectory.py  trajectory_generation.py
include/eagle_mpc/: mpc-base.hpp  multicopter-base-params.hpp  sbfddp.hpp  stage.hpp  trajectory.hpp
include/eagle_mpc/factory/: activation.hpp  contacts.hpp  cost.hpp  diff-action.hpp  int-action.hpp
include/eagle_mpc/mpc-controllers/: carrot-mpc.hpp  rail-mpc.hpp  weighted-mpc.hpp
include/eagle_mpc/utils/: converter.hpp  converter_utils.hpp  log.hpp  params_server.hpp  parser_yaml.hpp  tools.hpp
include/multicopter_mpc/: mission.hpp  mpc-base.hpp  mpc-main.hpp  multicopter-base-params.hpp  ocp-base.hpp  problem-mission.hpp  sbfddp.hpp  stage.hpp  trajectory.hpp  waypoint.hpp
include/multicopter_mpc/factory/: activation.hpp  contacts.hpp  cost.hpp  diff-action.hpp  int-action.hpp
include/multicopter_mpc/mpc-controllers/: carrot-mpc.hpp  rail-mpc.hpp  weighted-mpc.hpp
include/multicopter_mpc/ocp/: low-level-controller.hpp  ocp-base.hpp  trajectory-generator-controller.hpp  trajectory-generator.hpp
include/multicopter_mpc/utils/: converter.hpp  log.hpp  params_server.hpp  parser_yaml.hpp  tools.hpp
src/: CMakeLists.txt  mission.cpp  mpc-base.cpp  mpc-main.cpp  mpc-main_bu.cpp  multicopter-base-params.cpp  ocp-base.cpp  problem-mission.cpp  sbfddp.cpp  stage.cpp  trajectory.cpp  waypoint.cpp
src/factory/: activation.cpp  contacts.cpp  cost.cpp  diff-action.cpp  int-action.cpp
src/mpc-controllers/: carrot-mpc.cpp  rail-mpc.cpp  weighted-mpc.cpp
src/ocp/: low-level-controller.cpp  ocp-base.cpp  trajectory-generator-controller.cpp  trajectory-generator.cpp
src/ocp/mpc/: carrot-mpc.cpp  low-level-controller.cpp  mpc-base.cpp  picewise-mpc.cpp  rail-mpc.cpp  trajectory-generator-controller.cpp
src/utils/: converter_utils.cpp  parser_yaml.cpp  tools.cpp
unittest/: CMakeLists.txt  carrot-mpc-test.cpp  low-level-controller-test.cpp  mission-test.cpp  mission_test.cpp  multicopter-base-params-test.cpp  picewise-mpc-test.cpp  rail-mpc-test.cpp  trajectory-generator-controller-test.cpp  trajectory-generator-test.cpp  waypoint-test.cpp  waypoint_test.cpp
unittest/config/: low-level-controller-test.yaml  mission-1wp-test.yaml  mission.yaml  takeoff.yaml
unittest/config/mission/: carrot-mpc-test-1.yaml  carrot-mpc-test-2.yaml  carrot-mpc-test-3.yaml  carrot-mpc-test-4.yaml  mission-test.yaml
unittest/config/multirotor/: hector-test.yaml  iris.yaml
unittest/config/ocp/: picewise-mpc-test.yaml  rail-mpc-test.yaml
unittest/python/: CMakeLists.txt  test_mission.py  test_multicopter_base_params.py  test_trajectory_generator.py  test_waypoint.py
yaml/hexacopter370/mpc/: mpc.yaml
yaml/hexacopter370/trajectories/: displacement.yaml  hover.yaml  passthrough.yaml
yaml/hexacopter370_flying_arm_3/mpc/: mpc.yaml
yaml/hexacopter370_flying_arm_3/platform/: hexacopter370.yaml
yaml_parser/: CMakeLists.txt
yaml_parser/bindings/: CMakeLists.txt
yaml_parser/bindings/python/yaml_parser/: __init__.py  params_server.hpp  parser_yaml.hpp  yaml_parser.cpp
yaml_parser/cmake/: FindYamlCpp.cmake
yaml_parser/include/yaml_parser/: converter.h  converter_utils.h  params_server.hpp  parser_yaml.h  parser_yaml.hpp
yaml_parser/src/: converter_utils.cpp  parser_yaml.cpp
(+26 files in other folders)
